4-DockerCompose/kubernetes/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: db
  ports:
  - name: mongodb
    port: 27017
    targetPort: 27017
  type: ClusterIP
