4-DockerCompose/kubernetes/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  selector:
    app: ui
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
