4-DockerCompose/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /ui
        pathType: Prefix
        backend:
          service:
            name: ui-service
            port:
              name: http
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              name: http
      - path: /db
        pathType: Prefix
        backend:
          service:
            name: db-service
            port:
              name: mongodb
